# coreason_etl_euctr

./: .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  NOTICE  README.md  check_bronze.py  euctr_bronze_pipeline.duckdb  euctr_gold_pipeline.duckdb  fetch_10_ids.py  llms.txt  mkdocs.yml  pipeline_state.json  pyproject.toml  test_100_ids.txt  test_10_ids.txt  test_output.txt  zensical.toml
data/: state.json
docs/: index.md  mapping_guide.md
src/coreason_etl_euctr/: __init__.py  aggregator.py  bigquery_loader.py  bronze_loader.py  crawler.py  downloader.py  gold_loader.py  harvester.py  loader.py  logger.py  main.py  models.py  parser.py  pipeline.py  postgres_loader.py  redshift_loader.py  storage.py  utils.py  worker.py
src/coreason_etl_euctr/utils/: __init__.py  config.py  hashing.py  logger.py  state_manager.py
src/coreason_etl_pmda/: __init__.py  crawler.py  downloader.py  models.py  parser.py  pipeline.py
tests/: __init__.py  test_aggregator.py  test_bigquery_loader.py  test_bigquery_loader_complex.py  test_bronze_complex.py  test_bronze_loader.py  test_cli.py  test_cli_bigquery.py  test_cli_complex.py  test_cli_full_crawl.py  test_cli_full_crawl_complex.py  test_cli_redshift.py  test_cli_s3.py  test_complex_cases.py  test_config.py  test_coverage_gap.py  test_crawler.py  test_crawler_complex.py  test_crawler_edge.py  test_crawler_resume.py  test_crawler_resume_scenarios.py  test_downloader.py  test_downloader_complex.py  test_downloader_edge.py  test_downloader_hashing_edge.py  test_downloader_resilience.py  test_gold_loader.py  test_harvester.py  test_hashing.py  test_incremental_silver.py  test_incremental_silver_complex.py  test_integration.py  test_integration_loader.py  test_loader.py  test_loader_interface.py  test_loader_schema_mismatch.py  test_main.py  test_main_edges.py  test_main_parallel.py  test_models.py  (+35 more)
