[tool.poetry]
name = "coreason_etl_euctr"
version = "0.1.0"
description = "This package provides an extensible ELT pipeline for synchronizing data from the EU CTR ecosystem."
authors = ["Gowtham A Rao <gowtham.rao@coreason.ai>"]
license = "Prosperity-3.0"
readme = "README.md"
packages = [{include = "coreason_etl_euctr", from = "src"}]

[tool.poetry.scripts]
euctr-etl = "coreason_etl_euctr.main:main"

[tool.poetry.dependencies]
python = ">=3.12, <3.15"
loguru = "^0.7.2"
pydantic = "^2.12.5"
psycopg = {extras = ["binary"], version = "^3.3.2"}
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.8"
pre-commit = "^3.7.1"
pytest-cov = "^5.0.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.26"
types-beautifulsoup4 = "^4.12.0.20250516"
types-requests = "^2.32.4.20250913"
mypy = "^1.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "coreason_etl_euctr"
version = "0.1.0"
description = "This package provides an extensible ELT pipeline for synchronizing data from the EU CTR ecosystem."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Gowtham A Rao", email = "gowtham.rao@coreason.ai" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/CoReason-AI/coreason_etl_euctr"
Repository = "https://github.com/CoReason-AI/coreason_etl_euctr"
Documentation = "https://github.com/CoReason-AI/coreason_etl_euctr"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*"]
